--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evenbetter-api",
+  "name": "@bebiks/evenbetter-api",
   "version": "1.0.0",
   "main": "./src/index.ts",
   "module": "./src/index.ts",
