--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "@bebiks/evenbetter-api",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "./src/index.ts",
   "module": "./src/index.ts",
   "type": "module",
   "author": "bebiks <bebiks@cvssadvisor.com>",
   "license": "CC0-1.0",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "scripts": {
-    "build": "bun build ./src/index.ts --outfile ./final/index.js --minify"
-  },
   "files": [
     "src/*"
   ],
   "dependencies": {
-    "@caido/sdk-frontend": "^0.35.0"
-  }
+    "@caido/sdk-frontend": "^0.37.0"
+  },
+  "scripts": {}
 }
